# read-the-manual

./: README.md  pyproject.toml  requirements.txt
Experimental/: read-the-manual.ipynb
app/: main.py
app/routers/chat/: chat.py  chat_schema.py
app/routers/manual/: manual.py  manual_schema.py
