[project]
name = "read-the-manual"
version = "0.1.0"
description = "A Retrieval-Augmented Generation (RAG) system designed to answer user queries based on manuals that users upload. This system leverages large language models (LLMs) along with a retrieval mechanism to provide accurate and contextually relevant answers from the manual content."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
